--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,12 @@
 {
-  "name": "VelleSketches",
-  "gcm_sender_id": "803875334376" // replace with actual value
+  "name": "CleverTap PWA App",
+  "short_name": "CTPWA",
+  "display": "standalone",
+  "theme_color": "#e7f736",
+  "background_color": "#4287f5",
+  "icons": [{
+    "src": "/icon-512x512.png",
+    "sizes": "512x512",
+    "type": "image/png"
+  }]
 }
